--- a/PRODUCTS.HTML
+++ b/PRODUCTS.HTML
@@ -1,34 +1,80 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-<meta charset="UTF-8"> 
-<title>Products - Semi Fixing</title> 
-<link rel="stylesheet" href="CSS/STYLE.CSS">
-</head> 
-<body> 
-<nav> 
-<a href="index.html">Home</a> 
-<a href="about.html">About</a> 
-<a href="products.html">Products</a>  
-<a href="contact.html">Contact</a> 
-<a href="enquiry.html">Enquiry</a> 
-</nav> 
-<h1>Our Products & Car Parts</h1> 
-<p>We provide quality car parts and accessories. See the images below:</p> 
-<div><h3>Car Battery</h3><img src="IMAGES/Halfords-HB075-Lead-Acid-12V-Car-Battery-3-Year-Guarantee.webp" alt="Car Battery" width="200"></div> 
-<div><h3>Tyres & Wheels</h3><img src="IMAGES/New-Tyres-640x454.jpeg" alt="Tyres & Wheels" width="200"></div> 
-<div><h3>Engine Oils & Filters</h3><img src="IMAGES/blog-13.jpg" alt="Engine Oils & Filters" width="200"></div> 
-<div><h3>Brake Pads</h3><img src="IMAGES/The-Importance-of-Timely-Brake-Pad-Replacement-for-Vehicle-Safety-1024x512.jpeg" alt="Brake Pads" width="200"></div> 
-<div><h3>Spark Plugs</h3><img src="IMAGES/blog-17.5.jpg" alt="Spark Plugs" width="200"></div> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Products - Semi Fixing</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/style.css">
+</head>
+<body>
 
-<h2> PRODUCTS PRICES</h2>
-<table border="4">
-    <tr> <th>CAR BATTERY</th> <th>PRICE FROM:R4000</th> </tr>
-    <tr> <th>TYRES & WHEELS</th> <th>PRICE FROM:R2000</th> </tr>
-    <tr> <th>WNGINE OILS & FILTERS</th> <th>PRICE FROM:R1500</th> </tr>
-    <tr> <th>BRAKE PADS</th> <th>PRICE FROM:R500</th> </tr>
-    <tr> <th>SPARK PLUGS</th>  <th> PRICE FROM:R1000</th> </tr>
+<nav>
+  <img src="IMAGES/ChatGPT Image Oct 30, 2025, 03_40_55 PM.png" alt="Semi Fixing Logo">
+  <div>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html">Contact</a>
+    <a href="enquiry.html">Enquiry</a>
+  </div>
+</nav>
 
-<footer><p>© 2025 Semi Fixing</p></footer> 
-</body> 
+<section class="hero">
+  <h1>Our Products & Car Parts</h1>
+  <p>We provide quality car parts and accessories. See the images below:</p>
+</section>
+
+<section class="layout">
+  <div>
+    <h3>Car Battery</h3>
+    <img src="IMAGES/Halfords-HB075-Lead-Acid-12V-Car-Battery-3-Year-Guarantee.webp" alt="Car Battery">
+  </div>
+  <div>
+    <h3>Tyres & Wheels</h3>
+    <img src="IMAGES/New-Tyres-640x454.jpeg" alt="Tyres & Wheels">
+  </div>
+  <div>
+    <h3>Engine Oils & Filters</h3>
+    <img src="IMAGES/blog-13.jpg" alt="Engine Oils & Filters">
+  </div>
+  <div>
+    <h3>Brake Pads</h3>
+    <img src="IMAGES/The-Importance-of-Timely-Brake-Pad-Replacement-for-Vehicle-Safety-1024x512.jpeg" alt="Brake Pads">
+  </div>
+  <div>
+    <h3>Spark Plugs</h3>
+    <img src="IMAGES/blog-17.5.jpg" alt="Spark Plugs">
+  </div>
+  <div>
+    <h3> Car Windscreen</h3>
+    <img src="IMAGES/repair-1.jpeg" alt="Car Windscreen">
+  </div>
+    <div>
+    <h3>CAR BUMPERS</h3>
+    <img src="IMAGES/download bum.jpg" alt="CAR BUMPERS">
+  </div>
+    <div>
+    <h3>Exhaust</h3>
+    <img src="IMAGES/images ex.jpg" alt="Exhaust">
+  </div>
+</section>
+
+<h2>PRODUCTS PRICES</h2>
+<table>
+  <tr><th>CAR BATTERY</th><th>PRICE FROM: R4000</th></tr>
+  <tr><th>TYRES & WHEELS</th><th>PRICE FROM: R2000</th></tr>
+  <tr><th>ENGINE OILS & FILTERS</th><th>PRICE FROM: R1500</th></tr>
+  <tr><th>BRAKE PADS</th><th>PRICE FROM: R500</th></tr>
+  <tr><th>SPARK PLUGS</th><th>PRICE FROM: R1000</th></tr>
+   <tr><th>CAR WINDSCREEN</th><th>PRICE FROM: R5000</th></tr>
+    <tr><th>CAR BUMPERS</th><th>PRICE FROM: R2500</th></tr>
+     <tr><th>EXHAUST</th><th>PRICE FROM: R1000</th></tr>
+</table>
+
+<footer>
+  <p>&copy; <span id="currentYear"></span> Semi Fixing</p>
+</footer>
+
+<script src="JAVA SCRIPT/script.js"></script>
+</body>
 </html>
