Revamp INDEX.HTML for improved layout and services
Added viewport meta tag for responsive design and updated CSS link. Included logo image and new service section.

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,26 +1,44 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-<meta charset="UTF-8"> 
-<title>Home - Semi Fixing</title>
-<link rel="stylesheet" href="CSS/STYLE.CSS">
-</head> 
-<body> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Home - Semi Fixing</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/style.css">
+</head>
+<body>
 
-<nav> 
-<a href="index.html">Home</a> | 
-<a href="about.html">About</a> | 
-<a href="products.html">Products</a> | 
-<a href="contact.html">Contact</a> | 
-<a href="enquiry.html">Enquiry</a> 
-</nav> 
+<nav>
+  <img src="IMAGES/ChatGPT Image Oct 30, 2025, 03_40_55 PM.png" alt="Semi Fixing Logo">
+  <div>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html">Contact</a>
+    <a href="enquiry.html">Enquiry</a>
+  </div>
+</nav>
 
-<h1>Welcome to Semi Fixing</h1> 
+<section class="hero">
+  <h1>Welcome to Semi Fixing</h1>
+  <p>Your trusted car repair workshop. Fast, reliable, and affordable car services.</p>
+  <img src="IMAGES/create-ads-flyer-poster-banner-for-car-sale-rental-dealership-and-carwash.png" alt="Workshop Banner">
+</section>
 
-<p>Your trusted car repair workshop. We provide fast, reliable, and affordable car services.</p> 
+<section>
+  <h2>OUR SERVICES</h2>
+  <ul>
+    <li>Engine diagnostics and repairs</li>
+    <li>Brake and suspension services</li>
+    <li>Oil change and maintenance</li>
+    <li>Body and paint work</li>
+  </ul>
+</section>
 
-<img src="IMAGES/create-ads-flyer-poster-banner-for-car-sale-rental-dealership-and-carwash.png" alt="" width="600"> 
+<footer>
+  <p>&copy; <span id="currentYear"></span> Semi Fixing</p>
+</footer>
 
-<footer><p>© 2025 Semi Fixing</p></footer> 
-</body> 
+<script src="JAVA SCRIPT/script.js"></script>
+</body>
 </html>
