--- a/ENQUIRY.HTML
+++ b/ENQUIRY.HTML
@@ -1,44 +1,62 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-<meta charset="UTF-8"> 
-<title>Enquiry - Semi Fixing</title> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Enquiry - Semi Fixing</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/style.css">
+</head>
+<body>
 
-<link rel="stylesheet" href="CSS/STYLE.CSS">
-</head> 
+<nav>
+  <img src="IMAGES/ChatGPT Image Oct 30, 2025, 03_40_55 PM.png" alt="Semi Fixing Logo">
+  <div>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html">Contact</a>
+    <a href="enquiry.html">Enquiry</a>
+  </div>
+</nav>
 
-<body> 
-<nav> 
-<a href="index.html">Home</a> | 
-<a href="about.html">About</a> | 
-<a href="products.html">Products</a> | 
-<a href="contact.html">Contact</a> | 
-<a href="enquiry.html">Enquiry</a> 
-</nav> 
-<h1>Send an Enquiry</h1> 
-<form> 
-<label for="fullname">Full Name:</label><br><input type="text" id="fullname" name="fullname"><br><br> 
-<label for="email">Email:</label><br><input type="email" id="email" name="email"><br><br> 
-<label for="phone">Phone:</label><br><input type="text" id="phone" name="phone"><br><br> 
-<label for="service">Service Interested:</label><br> 
-<select id="service" name="service"> 
-<option>Oil Change</option> 
-<option>Brake Service</option> 
-<option>Engine Check</option> 
-<option>Battery Replacement</option> 
-<option>Tyres & Alignment</option> 
-<option>Other</option> 
-</select><br><br> 
-<label for="message">Message:</label><br><textarea id="message" name="message" rows="5" cols="35"></textarea><br><br> 
-<button type="submit">Send Enquiry</button> 
-</form> 
-<footer><p>© 2025 Semi Fixing</p></footer> 
-</body> 
-</html> 
- 
+<section class="hero">
+  <h1>Send an Enquiry</h1>
+  <p>Request a quote or ask about our services.</p>
+</section>
 
- 
+<section>
+  <form>
+    <label for="fullname">Full Name:</label>
+    <input type="text" id="fullname" name="fullname" required>
 
- 
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
 
- 
+    <label for="phone">Phone:</label>
+    <input type="text" id="phone" name="phone" required>
+
+    <label for="service">Service Interested:</label>
+    <select id="service" name="service" required>
+      <option value="">--Select Service--</option>
+      <option>Oil Change</option>
+      <option>Brake Service</option>
+      <option>Engine Check</option>
+      <option>Battery Replacement</option>
+      <option>Tyres & Alignment</option>
+      <option>Other</option>
+    </select>
+
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="5"></textarea>
+
+    <button type="submit">Send Enquiry</button>
+  </form>
+</section>
+
+<footer>
+  <p>&copy; <span id="currentYear"></span> Semi Fixing</p>
+</footer>
+
+<script src="JAVA SCRIPT/script.js"></script>
+</body>
+</html>
