Refactor ABOUT.HTML for improved layout and content
Updated the ABOUT.HTML file to enhance structure and content.

--- a/ABOUT.HTML
+++ b/ABOUT.HTML
@@ -1,41 +1,63 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-<meta charset="UTF-8"> 
-<title>About Us - Semi Fixing</title> 
-<link rel="stylesheet" href="CSS/STYLE.CSS">
-</head> 
-<body> 
-<nav> 
-<a href="index.html">Home</a> | 
-<a href="about.html">About</a> | 
-<a href="products.html">Products</a> | 
-<a href="contact.html">Contact</a> | 
-<a href="enquiry.html">Enquiry</a> 
-</nav> 
-<h1>About Semi Fixing</h1> 
-<p>Semi Fixing is a trusted local car repair workshop providing fast, reliable, and affordable car repair services.</p> 
-<h2>Vision</h2> 
-<p>To be the most trusted and accessible car repair service in the community.</p> 
-<h2>Mission</h2> 
-<p>To provide reliable, affordable, and quick car repair services with excellent customer care.</p> 
-<h2>Why Choose Us?</h2> 
-<ul> 
-<li>Experienced and certified mechanics</li> 
-<li>Quick and efficient service</li> 
-<li>Affordable pricing</li> 
-<li>Customer-focused approach</li> 
-</ul> 
-<img src="IMAGES/create-ads-flyer-poster-banner-for-car-sale-rental-dealership-and-carwash.png" alt="" width="600"> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>About Us - Semi Fixing</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/style.css">
+</head>
+<body>
 
-</form> 
-<h2>Our Location</h2> 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.177920555093!2d27.873956!3d-26.267823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95633e56d1b9bf%3A0xf826504a9177c88!2sSoweto%2C%20South%20Africa!5e0!3m2!1sen!2sus!4v1693110000000!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
-<footer><p>© 2025 Semi Fixing</p></footer> 
-</body> 
-</html>
+<nav>
+  <img src="IMAGES/ChatGPT Image Oct 30, 2025, 03_40_55 PM.png" alt="Semi Fixing Logo">
+  <div>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html">Contact</a>
+    <a href="enquiry.html">Enquiry</a>
+  </div>
+</nav>
 
+<section class="hero">
+  <h1>About Semi Fixing</h1>
+  <p>Semi Fixing is a trusted local car repair workshop providing fast, reliable, and affordable car repair services.</p>
+</section>
 
-<footer><p>© 2025 Semi Fixing</p></footer> 
-</body> 
+<section>
+  <h2>Vision</h2>
+  <p>To be the most trusted and accessible car repair service in the community.</p>
+
+  <h2>Mission</h2>
+  <p>To provide reliable, affordable, and quick car repair services with excellent customer care.</p>
+
+  <h2>Why Choose Us?</h2>
+  <ul>
+    <li>Experienced and certified mechanics</li>
+    <li>Quick and efficient service</li>
+    <li>Affordable pricing</li>
+    <li>Customer-focused approach</li>
+  </ul>
+
+  <h2>Our Values</h2>
+  <ul>
+    <li>Honesty and transparency in all repairs</li>
+    <li>Respect for every customer</li>
+    <li>Commitment to quality services</li>
+  </ul>
+
+  <h2>Customer Testimonials</h2>
+  <p>"Semi Fixing repaired my car quickly, I was back on the road the same day." - <em>THABO M</em></p>
+  <p>"Great services and friendly staff. Highly recommended." - <em>SIPHO S</em></p>
+
+  <h2>Our Location</h2>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.177920555093!2d27.873956!3d-26.267823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95633e56d1b9bf%3A0xf826504a9177c88!2sSoweto%2C%20South%20Africa!5e0!3m2!1sen!2sus!4v1693110000000!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</section>
+
+<footer>
+  <p>&copy; <span id="currentYear"></span> Semi Fixing</p>
+</footer>
+
+<script src="JAVA SCRIPT/script.js"></script>
+</body>
 </html>
